Fixed more drop down menu on tablet.

--- a/src/NavigationBar.styles.scss
+++ b/src/NavigationBar.styles.scss
@@ -101,7 +101,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 48%;
+  width: 45%;
 }
 
 .menuItem {
@@ -134,16 +134,52 @@
       color: $bgc-orange;
       transition: all 0.5s ease;
     }
+  }
 
-    .moreDropDown {
+  &.showProductsMenu {
+    .productsMenu {
       opacity: 1;
       pointer-events: all;
       transition: all 0.25s ease;
     }
   }
+}
 
-  &.showProductsMenu {
-    .productsMenu {
+
+.moreDropDownMenuItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 37px 0;
+
+  .item {
+    @include menu-font;
+    margin: 5px;
+  }
+
+  .underline {
+    width: 85px;
+    height: 2px;
+    opacity: 0;
+  }
+
+  &:hover {
+    cursor: pointer;
+
+    .underline {
+      opacity: 1;
+      background-color: $bgc-orange;
+      transition: all 0.5s ease;
+    }
+
+    .item {
+      color: $bgc-orange;
+      transition: all 0.5s ease;
+    }
+  }
+
+  &.showMoreMenu {
+    .moreDropDown {
       opacity: 1;
       pointer-events: all;
       transition: all 0.25s ease;
