--- a/src/footer.styles.scss
+++ b/src/footer.styles.scss
@@ -29,7 +29,6 @@
     flex-direction: row;
     justify-content: flex-start;
     width: 100%;
-    height: 100%;
 
     @include tablet {
       display: flex;
